# oop_lab3

./: CMakeLists.txt  main.cpp
address/: CMakeLists.txt  address.cpp  address.h
apartment/: CMakeLists.txt  apartment.cpp  apartment.h
app/: CMakeLists.txt  app.cpp  app.h
aux_funcs/: CMakeLists.txt  aux_funcs.cpp  aux_funcs.h
cottage/: CMakeLists.txt  cottage.cpp  cottage.h
flat/: CMakeLists.txt  flat.cpp  flat.h
living/: CMakeLists.txt  living.cpp  living.h
room/: CMakeLists.txt  room.cpp  room.h
table/: CMakeLists.txt  table.cpp  table.h  table.tcc
tests/: CMakeLists.txt  testing.cpp
