cmake_minimum_required(VERSION 3.16)
project(oopprog2)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra")

add_subdirectory(address)
add_subdirectory(apartment)
add_subdirectory(cottage)
add_subdirectory(flat)
add_subdirectory(living)
add_subdirectory(room)
add_subdirectory(table)
#add_subdirectory(tests)

add_executable(main main.cpp)
target_link_libraries(main apartment cottage flat room table address living)
#add_executable(testing tests/testing.cpp)
#target_link_libraries(testing apartment cottage flat room table address living)
#add_compile_options(-fprofile-arcs -ftest-coverage)
#link_libraries(gcov)